--- a/.gitignore
+++ b/.gitignore
@@ -21,9 +21,11 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
-/build/
+**/build/
+manifest.mf
+**/dist/
+**/nbproject/private/
 
 WJLCS.Packager.exe
-/nbproject/private/
-/.submission
-/manifest.mf
+/~submission
+~*
