Week6 and previous Week updates

--- a/Week4/WeekInfo.ini
+++ b/Week4/WeekInfo.ini
@@ -1,6 +1,6 @@
 ; General Settings
 WeekCount=13
-NamePadding=18
+NamePadding=20
 WeeksPerRow=3
 
 ; Week Names
@@ -9,3 +9,4 @@ Week2.Name=Job Application
 Week3.Name=Week Selector
 Week4.Name=Week Selector v2
 Week5.Name=Temp Converter
+Week6.Name=Temp File Converter
