--- a/Week4/WeekInfo.ini
+++ b/Week4/WeekInfo.ini
@@ -9,4 +9,5 @@ Week2.Name=Job Application
 Week3.Name=Week Selector
 Week4.Name=Week Selector v2
 Week5.Name=Temp Converter
-Week6.Name=Temp File Converter
+Week6.Name=Temp Converter v2
+Week7.Name=Temp File Converter
