--- a/Week4/WeekInfo.ini
+++ b/Week4/WeekInfo.ini
@@ -11,3 +11,4 @@ Week4.Name=Week Selector v2
 Week5.Name=Temp Converter
 Week6.Name=Temp Converter v2
 Week7.Name=Temp File Converter
+Week8.Name=Currency Converter
