--- a/Week4/WeekInfo.ini
+++ b/Week4/WeekInfo.ini
@@ -12,3 +12,4 @@ Week5.Name=Temp Converter
 Week6.Name=Temp Converter v2
 Week7.Name=Temp File Converter
 Week8.Name=Currency Converter
+Week9.Name=Final Project v1
