--- a/Week9/build.xml
+++ b/Week9/build.xml
@@ -70,4 +70,9 @@
     nbproject/build-impl.xml file. 
 
     -->
+    <target name="-post-compile">
+        <copy todir="${dist.dir}/resources" overwrite="true">
+			<fileset dir="resources" includes="**"/>
+		</copy>
+    </target>
 </project>
