Start porting projects and fix Menu Driver Bug
* Begin porting Temperature, Currency projects.
* Start Hello World fancy drawer menus.
* Fix MenuDriver LAST Screen action improperly getting assigned to current screen.

--- a/FinalProject/build.xml
+++ b/FinalProject/build.xml
@@ -72,7 +72,8 @@
     -->
     <target name="-post-compile">
         <copy todir="${dist.dir}/resources" overwrite="true">
-			  <fileset dir="resources" includes="**"/>
-		</copy>
+			      <fileset dir="resources" includes="**"/>
+		    </copy>
+        <copy file="CurrencyUnits.txt" todir="${dist.dir}" overwrite="true"/>
     </target>
 </project>
