Finish Job Application final project.

--- a/FinalProject.Utilities.Menus/nbproject/project.properties
+++ b/FinalProject.Utilities.Menus/nbproject/project.properties
@@ -24,18 +24,13 @@ debug.test.classpath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/FinalProject.jar
+dist.jar=${dist.dir}/FinalProject.Utilities.Menus.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${reference.FinalProject_Utilities.jar}:\
-    ${reference.FinalProject_Utilities_Menus.jar}:\
-    ${reference.FinalProject_Projects_HelloWorld.jar}:\
-    ${reference.FinalProject_Projects_JobApplication.jar}:\
-    ${reference.FinalProject_Projects_TemperatureConverter.jar}:\
-    ${reference.FinalProject_Projects_CurrencyConverter.jar}
+    ${reference.FinalProject_Utilities.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -59,23 +54,11 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=trigger.finalproject.Main
-manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
-mkdist.disabled=false
+mkdist.disabled=true
 platform.active=default_platform
-project.FinalProject_Projects_CurrencyConverter=../FinalProject.Projects.CurrencyConverter
-project.FinalProject_Projects_HelloWorld=../FinalProject.Projects.HelloWorld
-project.FinalProject_Projects_JobApplication=../FinalProject.Projects.JobApplication
-project.FinalProject_Projects_TemperatureConverter=../FinalProject.Projects.TemperatureConverter
 project.FinalProject_Utilities=../FinalProject.Utilities
-project.FinalProject_Utilities_Menus=../FinalProject.Utilities.Menus
-reference.FinalProject_Projects_CurrencyConverter.jar=${project.FinalProject_Projects_CurrencyConverter}/dist/FinalProject.Projects.CurrencyConverter.jar
-reference.FinalProject_Projects_HelloWorld.jar=${project.FinalProject_Projects_HelloWorld}/dist/FinalProject.Projects.HelloWorld.jar
-reference.FinalProject_Projects_JobApplication.jar=${project.FinalProject_Projects_JobApplication}/dist/FinalProject.Projects.JobApplication.jar
-reference.FinalProject_Projects_TemperatureConverter.jar=${project.FinalProject_Projects_TemperatureConverter}/dist/FinalProject.Projects.TemperatureConverter.jar
 reference.FinalProject_Utilities.jar=${project.FinalProject_Utilities}/dist/FinalProject.Utilities.jar
-reference.FinalProject_Utilities_Menus.jar=${project.FinalProject_Utilities_Menus}/dist/FinalProject.Utilities.Menus.jar
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
